Ran into issues with borders adding extra spacing to elements, overlayed margins

--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,138 @@
 /* Add CSS styling here */
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* generic styling */
+
+html {
+    font-size:62.5%;
+}
+
+body {
+    font-size:3rem;
+}
+
+h1 {
+    font-size: 5.5rem;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 4.5rem;
+    font-weight: bold;
+    color: #E352FF;
+}
+
+/* top styling */
+#top {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.9%
+}
+
+#top a {
+    border: 4px black solid;
+    padding: 10px;
+    margin:0 -4px 0 0;
+    font-size:3rem;
+    text-decoration: none;
+    color:black;
+}
+a#selected{
+    border: 4px transparent solid;
+    background: black;
+    color: white;
+}
+
+#navbar {
+    display:inline-block;
+    padding: 0;
+    font-size: 0px
+}
+/* middle styling */
+#middle {
+    text-align:center;
+}
+
+.imageContainer{
+    display:table;
+}
+
+.imageContainer img{
+    width:50%;
+    position: absolute;
+    text-align:center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+.overlay {
+    position:absolute;
+    width: 20%;
+    text-align:center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 8rem;
+}
+
+.overlay h2 {
+    padding: 10px;
+    border-radius:25px
+}
+
+.overlay a {
+    background-color:#FFE45C;
+    padding: 3%;
+    border-radius: 9px;
+    text-decoration: none;
+    color: #D500FF;
+}
